--- a/tractor/src/public/index.html
+++ b/tractor/src/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Půjčovna trakrtorů</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <base href="/">
   </head>
